# gazebo_ros2_control

./: README.md
gazebo_ros2_control_demos/config/: cartpole_controller_closed_loop_pos.yaml  gripper_effort_controller.yaml  gripper_with_base_controller.yaml
gazebo_ros2_control_demos/launch/: cart_example_closed_loop_pos.launch.py  gripper_effort_mimic_joint_example.launch.py  sliding_base_gripper_effort_mimic_joint.launch.py
gazebo_ros2_control_demos/urdf/: gripper_effort_mimic_joint_sliding_base.xacro.urdf  test_cart_closed_loop_pos.xacro.urdf  test_gripper_effort_mimic_joint.xacro.urdf
robotiq_85_description/: CMakeLists.txt  README.md  package.xml
robotiq_85_description/config/: gripper_controller.yaml  view_gripper_cf.rviz
robotiq_85_description/launch/: gazebo_gripper_mimic_joint.launch.py  view_gripper_cf.launch.py
robotiq_85_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper_macro.urdf.xacro  robotiq_85_gripper_macro_ros2.urdf.xacro  robotiq_85_gripper_ros2.urdf.xacro
